set up formatter

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "format": "prettier --write .",
     "test": "ava",
     "test-all": "ava ./src/**/spec.ts"
   },
