--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
-    "@types/ramda": "^0.30.2"
+    "@types/ramda": "^0.30.2",
+    "clinic": "^13.0.0"
   },
   "ava": {
     "extensions": [
