--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "format": "prettier --write .",
     "test": "ava",
     "test-all": "ava ./src/**/spec.ts",
+    "benchmark": "tsc && clinic flame --open=false -- node",
     "try": "ts-node"
   },
   "keywords": [],
