--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "@types/node": "^22.10.1",
     "@types/ramda": "^0.30.2",
-    "clinic": "^13.0.0"
+    "clinic": "^13.0.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "ava": {
     "extensions": [
